--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,9 +10,10 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     align-items: center;
-    justify-content: center;    
+    justify-content: center;
 }
-body video{
+
+body video {
     z-index: -1;
     position: absolute;
     top: 0;
@@ -27,7 +28,7 @@ body video{
     align-items: center;
     justify-content: space-between;
     flex-direction: column;
-    width: 500px;
+    width: 40%;
     height: auto;
     box-shadow: 0px 10px 25px 0px rgba(4, 226, 255, 0.486);
     padding: 20px;
@@ -38,7 +39,7 @@ body video{
     width: 100%;
     padding: 20px;
     margin: auto;
-    
+
     background: rgba(255, 255, 255, 0.219);
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
@@ -52,7 +53,7 @@ h1 {
     background-color: black;
     padding: 5px 0;
     border-radius: 30px;
-    
+
 }
 
 form label {
@@ -103,12 +104,23 @@ form input[type="button"] {
     border-radius: 10px;
     font-size: 25px;
     border: 1px solid black;
-    /* background-color: rgba(0, 0, 0, 0.329); */
     background: black;
     mix-blend-mode: multiply;
     color: snow;
 }
-.DateBox .top{
+
+.DateBox .top {
     text-align: center;
     font-weight: bold;
+}
+
+@media screen and (max-width: 768px) {
+    .MainBox {
+        width: 90%;
+    }
+
+    h1 {
+
+        font-size: 30px;
+    }
 }
